# tea-camellia

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  docker-compose.yml  fast.sh  file_header.txt  ps.md  run-local.sh  test.sh  types.json
.github/workflows/: rust-toolchain.toml  rust.yml
.github_bk/workflows/: rust.yml
.maintain/: frame-weight-template.hbs
docker/: build-image.sh  build.sh
docs/: migrate_evm.md
node/: Cargo.toml  build.rs
node/data/: dev.csv
node/src/: chain_spec.rs  cli.rs  command.rs  dev.csv  main.rs  mining_startup.csv  parser.rs  rpc.rs  service.rs  tapp_startup.csv
pallets/auction/: Cargo.toml
pallets/auction/interface/: Cargo.toml
pallets/auction/interface/src/: lib.rs
pallets/auction/rpc/: Cargo.toml
pallets/auction/rpc/src/: lib.rs  types.rs
pallets/auction/runtime-api/: Cargo.toml
pallets/auction/runtime-api/src/: lib.rs
pallets/auction/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs  weights.rs
pallets/bonding-curve/: Cargo.toml  README.md
pallets/bonding-curve/curve-impl/: Cargo.toml
pallets/bonding-curve/curve-impl/src/: lib.rs  linear.rs  square_root.rs
pallets/bonding-curve/curve-impl/src/square_root/: k10.rs  k7.rs
pallets/bonding-curve/interface/: Cargo.toml
pallets/bonding-curve/interface/src/: lib.rs
pallets/bonding-curve/rpc/: Cargo.toml
pallets/bonding-curve/rpc/src/: lib.rs
pallets/bonding-curve/runtime-api/: Cargo.toml
pallets/bonding-curve/runtime-api/src/: lib.rs
pallets/bonding-curve/src/: functions.rs  lib.rs  migrations.rs  mock.rs  rpc.rs  tests.rs  types.rs
pallets/bounding-curve/: Cargo.toml  README.md
pallets/bounding-curve/curve-impl/: Cargo.toml
pallets/bounding-curve/curve-impl/src/: lib.rs  linear.rs  square_root.rs
pallets/bounding-curve/curve-impl/src/square_root/: k1000.rs  k700.rs
pallets/bounding-curve/interface/: Cargo.toml
pallets/bounding-curve/interface/src/: lib.rs
pallets/bounding-curve/rpc/: Cargo.toml
pallets/bounding-curve/rpc/src/: lib.rs
pallets/bounding-curve/runtime-api/: Cargo.toml
pallets/bounding-curve/runtime-api/src/: lib.rs
pallets/bounding-curve/src/: functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs
pallets/cml/: Cargo.toml  README.md
pallets/cml/rpc/: Cargo.toml
pallets/cml/rpc/src/: lib.rs  types.rs
pallets/cml/runtime-api/: Cargo.toml
pallets/cml/runtime-api/src/: lib.rs
pallets/cml/src/: benchmarking.rs  cml_operation.rs  functions.rs  generator.rs  impl_stored_map.rs  lib.rs  mock.rs  rpc.rs  staking.rs  tests.rs  types.rs  weights.rs
pallets/cml/src/generator/: defrost.rs  lifespan.rs  performance.rs
pallets/cml/src/tests/: cml.rs  coupon.rs  draw.rs  genesis.rs  mining.rs  staking.rs  sudo.rs  voucher.rs
pallets/cml/src/types/: cml.rs  coupons.rs  miner.rs  param.rs  seeds.rs  staking.rs  vouchers.rs
pallets/cml/staking-economics/: Cargo.toml
pallets/cml/staking-economics/src/: index.rs  lib.rs  test.rs
pallets/genesis-bank/: Cargo.toml  README.md
pallets/genesis-bank/interface/: Cargo.toml
pallets/genesis-bank/interface/src/: lib.rs
pallets/genesis-bank/rpc/: Cargo.toml
pallets/genesis-bank/rpc/src/: lib.rs
pallets/genesis-bank/runtime-api/: Cargo.toml
pallets/genesis-bank/runtime-api/src/: lib.rs
pallets/genesis-bank/src/: functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs
pallets/genesis-exchange/: Cargo.toml  README.md
pallets/genesis-exchange/interface/: Cargo.toml
pallets/genesis-exchange/interface/src/: lib.rs
pallets/genesis-exchange/rpc/: Cargo.toml
pallets/genesis-exchange/rpc/src/: lib.rs  types.rs
pallets/genesis-exchange/runtime-api/: Cargo.toml
pallets/genesis-exchange/runtime-api/src/: lib.rs
pallets/genesis-exchange/src/: functions.rs  lib.rs  mining.rs  mock.rs  rpc.rs  tests.rs
pallets/machine/: Cargo.toml  README.md
pallets/machine/rpc/: Cargo.toml
pallets/machine/rpc/src/: lib.rs
pallets/machine/runtime-api/: Cargo.toml
pallets/machine/runtime-api/src/: lib.rs
pallets/machine/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs  weights.rs
pallets/staking/: Cargo.toml
pallets/staking/fuzzer/src/: mock.rs
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/src/: lib.rs  mock.rs  tests.rs
pallets/staking/src/pallet/: impls.rs  mod.rs
pallets/tea/: Cargo.toml
pallets/tea-erc20/: Cargo.toml
pallets/tea-erc20/src/: functions.rs  lib.rs  mock.rs  tests.rs
pallets/tea/interface/: Cargo.toml
pallets/tea/interface/src/: lib.rs
pallets/tea/rpc/: Cargo.toml
pallets/tea/rpc/src/: lib.rs
pallets/tea/runtime-api/: Cargo.toml
pallets/tea/runtime-api/src/: lib.rs
pallets/tea/src/: benchmarking.rs  functions.rs  group.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs  utils.rs  weights.rs
pallets/utils/: Cargo.toml  README.md
pallets/utils/src/: functions.rs  lib.rs  mock.rs  traits.rs  types.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  weights.rs
runtime/src/weights/: frame_system.rs  pallet_auction.rs  pallet_babe.rs  pallet_balances.rs  pallet_cml.rs  pallet_collective.rs  pallet_democracy.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_im_online.rs  pallet_membership.rs  pallet_multisig.rs  pallet_scheduler.rs  pallet_session.rs  pallet_staking.rs  pallet_tea.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
simulators/bizsim/: Cargo.toml
simulators/bizsim/src/: global_context.rs  main.rs
simulators/cmlsim/: Cargo.toml
simulators/cmlsim/src/: main.rs  mock.rs  simulator.rs
tests/: batch_exported_account_asdfasdf.json  sudo-npc-key.md
tests/canary-network/: .gitignore  README.md  canary-tools.sh  docker-compose.yaml  tools.sh
tests/canary-network/data/: competition.csv  epoch3pre.csv  test.csv
tests/local-network/: docker-compose.yaml  test.csv  tools.sh
