[profile.release]
panic = 'unwind'

[workspace]
members = [
	'node',
	'runtime',
	'pallets/*',
	'simulators/*',

	'pallets/cml/runtime-api',
	'pallets/cml/rpc',
	'pallets/cml/staking-economics',

	'pallets/auction/runtime-api',
	'pallets/auction/rpc',

	'pallets/genesis-bank/runtime-api',
	'pallets/genesis-bank/rpc',

	'pallets/genesis-exchange/runtime-api',
	'pallets/genesis-exchange/rpc'
]
