[package]
authors = ['TeaRust']
build = 'build.rs'
description = 'Tea layer1.'
edition = '2021'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'tea-camellia'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[[bin]]
name = 'tea-camellia'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1" }
serde = { version = "1.0.126", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
jsonrpsee = { version = "0.14.0", features = ["server"] }
log = "0.4.14"
jsonrpc-core = '18.0.0'
hex = '0.4.3'
hex-literal = '0.3.1'
rand = "0.7.2"
futures = "0.3.16"
csv = '1.1'

# Substrate dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-cli = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-client-api = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-consensus-uncles = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-executor = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-keystore = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-service = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-network = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-telemetry = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-transaction-pool-api = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
grandpa = { package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
sc-sync-state-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }

sp-api = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-blockchain = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-consensus-slots = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-core = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-timestamp = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-authorship = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-transaction-storage-proof = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
grandpa-primitives = { package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }

node-executor = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
node-inspect = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
node-primitives = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
substrate-frame-rpc-system = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
try-runtime-cli = { optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }

frame-benchmarking = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
frame-benchmarking-cli = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}

pallet-im-online = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
pallet-transaction-payment-rpc = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
pallet-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
pallet-mmr-rpc = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
substrate-state-trie-migration-rpc = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-keystore = {git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}

# local dependencies
camellia-runtime = {version = '0.0.1', path = '../runtime'}
cml-runtime-api = {path = '../pallets/cml/runtime-api'}
cml-rpc = {path = '../pallets/cml/rpc'}
machine-runtime-api = {path = '../pallets/machine/runtime-api'}
machine-rpc = {path = '../pallets/machine/rpc'}
genesis-exchange-runtime-api = {path = '../pallets/genesis-exchange/runtime-api'}
genesis-exchange-rpc = {path = '../pallets/genesis-exchange/rpc'}

[build-dependencies]
substrate-build-script-utils = {optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}

[features]
default = [ "cli" ]
cli = [
	"substrate-build-script-utils",
]
runtime-benchmarks = ['camellia-runtime/runtime-benchmarks']
fast = ['camellia-runtime/fast']
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["camellia-runtime/try-runtime", "try-runtime-cli"]
