[package]
authors = ['TeaRust']
edition = '2018'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'camellia-runtime'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder={version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
hex-literal= {optional = true, version = '0.3.1'}
static_assertions = "1.1.0"

# primitives
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-block-builder = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-consensus-babe = {default-features = false, version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-inherents = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-offchain = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-session = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-transaction-pool = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-version = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-staking = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-authority-discovery = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-npos-elections = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-executive = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-system-benchmarking = {default-features = false, optional = true, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-system-rpc-runtime-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-election-provider-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-babe = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-balances = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-grandpa = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-randomness-collective-flip = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-sudo = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-timestamp = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-transaction-payment = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-session = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-session-benchmarking = {default-features = false, optional = true, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-staking = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-staking-reward-curve = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-authorship = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-offences = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-offences-benchmarking = {default-features = false, optional = true, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-im-online = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-authority-discovery = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-elections-phragmen = {default-features = false, version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-election-provider-multi-phase = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-collective = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-membership = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-scheduler = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-democracy = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-utility = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-multisig = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-identity = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-treasury = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
chainbridge = {default-features = false, version = '0.0.2', git = 'https://github.com/tearust/chainbridge-substrate', rev = '13fb952'}

# local dependencies
pallet-tea = {default-features = false, path = '../pallets/tea'}
pallet-auction = {default-features = false, path = '../pallets/auction'}
pallet-bridge = {default-features = false, path = '../pallets/bridge'}
pallet-utils = {default-features = false, path = '../pallets/utils'}

pallet-cml = {default-features = false, path = '../pallets/cml'}
cml-runtime-api = {default-features = false, path = '../pallets/cml/runtime-api'}
auction-runtime-api = {default-features = false, path = '../pallets/auction/runtime-api'}
staking-economics = {default-features = false, path = '../pallets/cml/staking-economics'}

[features]
default = ['std']
runtime-benchmarks = [
	'hex-literal',
	'sp-runtime/runtime-benchmarks',

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',

	'pallet-grandpa/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-staking/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-elections-phragmen/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-membership/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'pallet-treasury/runtime-benchmarks',

	'pallet-tea/runtime-benchmarks',
	'pallet-cml/runtime-benchmarks',
]
std = [
	'codec/std',
	'sp-api/std',
	'node-primitives/std',
	'sp-block-builder/std',
	'sp-consensus-babe/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
    'sp-staking/std',
	'sp-authority-discovery/std',
    'sp-npos-elections/std',

	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'frame-election-provider-support/std',

	'pallet-babe/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-session/std',
	'pallet-staking/std',
    'pallet-authorship/std',
	'pallet-offences/std',
    'pallet-im-online/std',
	'pallet-authority-discovery/std',
	'pallet-elections-phragmen/std',
    'pallet-election-provider-multi-phase/std',
	'pallet-collective/std',
    'pallet-membership/std',
	'pallet-scheduler/std',
	'pallet-democracy/std',
    'pallet-utility/std',
	'pallet-multisig/std',
	'pallet-identity/std',
	'pallet-treasury/std',
	'chainbridge/std',

	'pallet-tea/std',
	'pallet-cml/std',
  	'pallet-auction/std',
	'pallet-bridge/std',
	'pallet-utils/std',
	'cml-runtime-api/std',
	'auction-runtime-api/std',
	'staking-economics/std',
]
fast = [] # indicate the block duration and epoch will be shorter to test
